Bug 1498769 - Also require a frame for an <option> to be interactively selectable.  r=enndeakin