layout/forms/nsListControlFrame.cpp
@@ -36,6 +36,7 @@
 #include <algorithm>
 
 using namespace mozilla;
+using namespace mozilla::dom;
 
 // Constants
 const uint32_t kMaxDropDownRows         = 20; // This matches the setting for 4.x browsers
@@ -1147,7 +1148,7 @@ nsListControlFrame::GetNonDisabledOptionFrom(int32_t aFromIndex,
     if (!node) {
       break;
     }
-    if (!selectElement->IsOptionDisabled(node)) {
+    if (IsOptionInteractivelySelectable(selectElement, node)) {
       if (aFoundIndex) {
         *aFoundIndex = i;
       }
@@ -1549,16 +1550,23 @@ nsListControlFrame::GetBSizeOfARow()
   return BSizeOfARow();
 }
 
-nsresult
-nsListControlFrame::IsOptionDisabled(int32_t anIndex, bool &aIsDisabled)
+bool
+nsListControlFrame::IsOptionInteractivelySelectable(int32_t aIndex) const
 {
-  RefPtr<dom::HTMLSelectElement> sel =
-    dom::HTMLSelectElement::FromNode(mContent);
-  if (sel) {
-    sel->IsOptionDisabled(anIndex, &aIsDisabled);
-    return NS_OK;
+  if (HTMLSelectElement* sel = HTMLSelectElement::FromNode(mContent)) {
+    if (HTMLOptionElement* item = sel->Item(aIndex)) {
+      return IsOptionInteractivelySelectable(sel, item);
+    }
   }
-  return NS_ERROR_FAILURE;
+  return false;
+}
+
+bool
+nsListControlFrame::IsOptionInteractivelySelectable(HTMLSelectElement* aSelect,
+                                                    HTMLOptionElement* aOption)
+{
+  return !aSelect->IsOptionDisabled(aOption) &&
+         aOption->GetPrimaryFrame();
 }
 
 //----------------------------------------------------------------------
@@ -1664,10 +1672,8 @@ nsListControlFrame::MouseUp(dom::Event* aMouseEvent)
 
     int32_t selectedIndex;
     if (NS_SUCCEEDED(GetIndexFromDOMEvent(aMouseEvent, selectedIndex))) {
-      // If it's disabled, disallow the click and leave.
-      bool isDisabled = false;
-      IsOptionDisabled(selectedIndex, isDisabled);
-      if (isDisabled) {
+      // If it's not selectable, disallow the click and leave.
+      if (!IsOptionInteractivelySelectable(selectedIndex)) {
         aMouseEvent->PreventDefault();
         aMouseEvent->StopPropagation();
         CaptureMouseEvents(false);
@@ -2036,9 +2042,8 @@ nsListControlFrame::AdjustIndexForDisabledOpt(int32_t aStartIndex,
   }
 
   while (1) {
-    // if the newIndex isn't disabled, we are golden, bail out
-    bool isDisabled = true;
-    if (NS_SUCCEEDED(IsOptionDisabled(newIndex, isDisabled)) && !isDisabled) {
+    // if the newIndex is selectable, we are golden, bail out
+    if (IsOptionInteractivelySelectable(newIndex)) {
       break;
     }
 
